@@ -1,6 +1,6 @@
 {
   "name": "karma-viewport",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Karma viewport resizer",
   "keywords": [
     "breakpoint",
