@@ -1,3 +1,8 @@
+karma-viewport-0.3.0 (2017-08-07)
+
+  * Added support to merge configuration with defaults
+  * Added support for customizable viewport element
+
 karma-viewport-0.2.1 (2017-08-01)
 
   * Fixed undefined variable in middleware
